fixup! Rewrite build jobs to use callable workflow

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -246,7 +246,7 @@ jobs:
 #################################### ORDINARY BUILDS ####################################
 #########################################################################################
   BuilderDebRelease:
-    uses: ./.github/actions/build.yml
+    uses: ./.github/workflows/reusable_build.yml
     with:
       checkout_depth: 0
       build_name: package_release
