fixup! Rewrite build jobs to use callable workflow

--- a/.github/workflows/reusable_build.yml
+++ b/.github/workflows/reusable_build.yml
@@ -9,7 +9,7 @@ name: Build ClickHouse
       checkout_depth:
         description: the value of the git shallow checkout
         required: false
-        type: int
+        type: number
         default: 1
       runner_type:
         description: the label of runner to use
