fixup! Rewrite build jobs to use callable workflow

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -246,6 +246,7 @@ jobs:
 #################################### ORDINARY BUILDS ####################################
 #########################################################################################
   BuilderDebRelease:
+    needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
     with:
       checkout_depth: 0
