--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,3 +1,4 @@
+# yamllint disable rule:comments-indentation
 name: PullRequestCI
 
 env:
@@ -249,18 +250,19 @@ jobs:
     needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
     with:
+      build_name: package_release
       checkout_depth: 0
-      build_name: package_release
-  BuilderBinRelease:
-    needs: [FastTest, StyleCheck]
-    uses: ./.github/workflows/reusable_build.yml
-    with:
-      build_name: package_release
   BuilderDebAarch64:
     needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
     with:
       build_name: package_aarch64
+      checkout_depth: 0
+  BuilderBinRelease:
+    needs: [FastTest, StyleCheck]
+    uses: ./.github/workflows/reusable_build.yml
+    with:
+      build_name: package_release
   BuilderDebAsan:
     needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
