fixup! Rewrite build jobs to use callable workflow

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -262,7 +262,7 @@ jobs:
     needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
     with:
-      build_name: package_release
+      build_name: binary_release
   BuilderDebAsan:
     needs: [FastTest, StyleCheck]
     uses: ./.github/workflows/reusable_build.yml
