--- a/.github/actions/common_setup/action.yml
+++ b/.github/actions/common_setup/action.yml
@@ -1,4 +1,4 @@
-name: Common setup and cleaning
+name: Common setup
 description: Setup necessary environments and clean the runner's temp path on ending
 inputs:
   job_type:
@@ -12,10 +12,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Setup and post-clean
-      uses: ./.github/actions/with-post-step
-      with:
-        main: |
+    - name: Setup
+      run: |
           echo "Setup the common ENV variables"
           cat >> "$GITHUB_ENV" << 'EOF'
           TEMP_PATH=${{runner.temp}}/${{inputs.job_type}}
@@ -25,7 +23,3 @@ runs:
             echo "The GITHUB_JOB_OVERRIDDEN ENV is unset, and must be set for the nested jobs"
             exit 1
           fi
-        post: |
-          docker ps --quiet | xargs --no-run-if-empty docker kill ||:
-          docker ps --all --quiet | xargs --no-run-if-empty docker rm -f ||:
-          sudo rm -fr "${{runner.temp}}"
