fixup! Rewrite build jobs to use callable workflow

--- a/.github/actions/common_setup/action.yml
+++ b/.github/actions/common_setup/action.yml
@@ -13,6 +13,7 @@ runs:
   using: "composite"
   steps:
     - name: Setup
+      shell: bash
       run: |
           echo "Setup the common ENV variables"
           cat >> "$GITHUB_ENV" << 'EOF'
