--- a/.github/workflows/reusable_build.yml
+++ b/.github/workflows/reusable_build.yml
@@ -66,8 +66,8 @@ jobs:
       - name: Build
         run: |
           sudo rm -fr "$TEMP_PATH"
-          mkdir -p "$TEMP_PATH"
-          cp -s "$GITHUB_WORKSPACE"/. "$REPO_COPY"
+          mkdir -p "$REPO_COPY"
+          cp -a "$GITHUB_WORKSPACE"/. "$REPO_COPY"/
           cd "$REPO_COPY/tests/ci" && python3 build_check.py "$BUILD_NAME"
       - name: Upload build URLs to artifacts
         if: ${{ success() || failure() }}
